fix for video not showing

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ p {
   display: none;
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 115vh;
   z-index: 10000000;
 }
 
@@ -196,12 +196,12 @@ p {
 }
 
 .modal-container__toggle--icon:hover {
-  color: greenyellow;
+  color: #ff7517;
   cursor: pointer;
 }
 
 .modal-container__content {
-  border: 2px solid #01bc67;
+  border: 2px solid #ff7517;
   background-color: #000;
   margin: 0 auto;
   display: block;
@@ -247,7 +247,12 @@ p {
 }
 
 .modal-toggle--icon:hover {
-  color: #01bc67;
+  color: #ff7517;
+}
+
+.fa-times:before {
+  content: "\f00d";
+  font-size: 3rem;
 }
 
 
